# size-monitor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SizeMonitor.sln
.github/workflows/: build.yml
App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SizeMonitor.App.csproj
App/Controls/: SizeTreeView.xaml  SizeTreeView.xaml.cs  Treemap.cs
App/Helpers/: SizeFormatter.cs
Core/: CMakeLists.txt
Core/asm/: simd_sum.cpp  simd_sum.h
Core/include/: smon_api.h
Core/src/: api.cpp  dir_scanner.cpp  mft_scanner.cpp  node_pool.cpp  scan_context.h  size_rollup.cpp
Core/test/: scan_test.cpp
Interop/: Native.cs  ScanNode.cs  ScanSession.cs  SizeMonitor.Interop.csproj
